palma.css
/* Styles for PalMA. */

/* General settings */
html {
    /* This keeps appearing scrollbars from repositioning the webpage */
    height: 100%;
    width: 100%;
    margin-left: calc(100vw - 100%);
    background-image: url(./images/user_background.png);
    background-position: center;
    background-attachment: fixed;
}
body {
    max-width: 1200px;
    margin: 0 auto;
    font-size: 1.1em;
}
.pure-button-primary, .pure-button-selected, a.pure-button-primary, a.pure-button-selected {
    background-color: #990000;
    border-radius: 6px;
}
.pure-button {
    padding: 0.4em;
}
a {
    color: #990000;
    text-decoration: none;
}
a:hover, a:active {
    color: #990000;
    text-decoration: underline;
}

/* Login form (login.php) */
#login_mask {
    margin: 1em auto;
    background-color: #f8f8f8;
    border: 1px solid #e2e2e2;
    border-radius: 6px;
    padding: .5em;
    width: auto;
    max-width: 800px;
    
    box-shadow: 7px 7px 3px #cfcfcf;
}
legend {
    font-family: sans-serif;
    font-size: 1.3em;
    text-align: center;
}
#login_mask button i {
    margin-left: .3em;
}
div.policy {
    text-align: center;
    font-size: .8em;
}
/* Workplace selection (monitor.php) */
#monitor_selection button {
    margin: 10px 10px 10px 10px;
    text-align: left;
    width: 240px;
}
#monitor_selection .fa-desktop {
    float: right;
    padding: 0 10px 0 10px;
}
#monitor_selection {
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    background-color: #F1F1F1;
    border: 1px solid;
    border-radius: 5px;
    box-shadow: 8px 8px 4px #666666;
    width: 790px;
}

/* Workplace selection (learningcenter.php) */
#monitor_mask {
    margin-left: auto;
    margin-right: auto;
    margin-top: 40px;
    padding: 0 0 20px 0;
    background-color: #F1F1F1;
    border: 1px solid;
    border-radius: 5px;
    box-shadow: 8px 8px 4px #666666;
    width: 560px;
}
.monitorchoice {
    margin-left: 40px;
}
.selectdisplay {
    background:url("images/main-klein.png");
    width:100px;
    height:80px;
    background-repeat:no-repeat;
    display:block;
    margin: 10px 10px 0 0;
}

/* Main User Interface (index.php) */
/* Tabs and Subtabs */
div.tab, div.subtab {
    overflow: hidden;
    background-color: #990000;
    text-align: center;
}
div.subtab {
    background-color: #e2e2e2;
    border-top: none;
}
div.tab button, div.subtab button {
    background-color: transparent;
    border: none;
    outline: none;
    cursor: pointer;
    padding: .4em .5em;
    transition: 0.3s;
    color: #f1f1f1;
    width:auto;
}
div.subtab button {
    color: black;
}
div.tab button:hover {
    background-color: #995555;
}
div.subtab button:hover {
    background-color: #d1d1d1;
}
div.tab button.active {
    background-color: #998888;
}
div.subtab button.active {
    background-color: #c0c0c0;
}
.tabcontent, .subtabcontent {
    display: none;
    text-align: center;
    -webkit-animation: fadeEffect 1s;
    -moz-animation: fadeEffect 1s;
    animation: fadeEffect 1s;
}
.subtabcontent {
    padding: .5em;
    margin: 0 auto;
}
@-webkit-keyframes fadeEffect {
    from {opacity: 0;}
    to {opacity: 1;}
}
@keyframes fadeEffect {
    from {opacity: 0;}
    to {opacity: 1;}
}

/* Workbench */
#workbench {
    margin-bottom: 2em;
}
div.description {
    margin: .5em auto;
    font-size: .8em;
    font-style: italic;
}

/* Add */
#Add div.subtabcontent {
    background-color: #f8f8f8;
    margin: .5em auto;
    border: 1px solid #c0c0c0;
    border-radius: 6px;
    text-align: center;
    
    box-shadow: 7px 7px 3px #cfcfcf;
}
/* Add File */
#palma-dropzone {
    border: 1px dotted #990000;
    border-radius: 6px;
    cursor: pointer;
    text-align: center;
}
#palma-dropzone i {
    color: #990000;
    vertical-align: middle;
}
.dz-default {
    padding: .5em;
}

/* Add URL */
#url_field {
    width: 60%;
}
#url_button {
    width: 30%;
}

/* Add Screen */
#vnc-button {
    border:1px solid #990000;
    border-radius: 7px;
    background-color: #f1f1f1;
    width: 13em;
    margin: .3em auto;
    padding: .6em;
    color: #990000;
    cursor:pointer;
    cursor: hand;
}
#vnc-button-container {
    margin: 0 auto;
    text-align: center;
}
#vnc-button-label {
    font-weight:bold;
    font-family: Tahoma, Sans-Serif;
    margin: 0 auto;
}
#vnc-button-label i {
    vertical-align: middle;
}
#vnc-button-label-subtext {
    font-family: Tahoma, Sans-Serif;
    font-size: 1em;
}

/* Control Layout */
button.splash_add {
    height: 3em;
    background-color: #990000;
    color: white;
    border-radius: 6px;
    font-size: 1.5em;
    margin-top: 1em;
}
#Control {display: block;}
#Layout {display: none;}
div.screenlayout {
    display: inline-block;
    vertical-align: middle;
    margin: 0 .05em;
}
div.screenlayout button {
    width: 3em;
    height: 3em;
    background-color: #b1b1b1;
    padding: .2em;
}
div.screenlayout button i {
    vertical-align: middle;
}
div.screenlayout button:hover {
    background-color: #995555;
}
div.screenlayout button:active {
    background-color: #990000;
}
div.screenlayout div.layout_left, div.screenlayout div.layout_right {
    display: inline-block;
    vertical-align: middle;
}
div.vertical i {
    display: block;
    margin-top: .1em;
}

/* Control Navigate */
div.window_entry {
    display: block;
    border: 1px solid #b1b1b1;
    max-height: 15em;
    margin: 0 auto .5em auto;
    max-width: 500px;
    vertical-align: top;
    background-color: #f1f1f1;
}
div.window_entry button {
    border: none;
    outline: none;
    cursor: pointer;
    background-color: transparent;
}
div.window_entry button.window_entry_button {
    background-color: #e2e2e2;
    padding: .6em .8em;
    transition: 0.3s;
    color: black;
    width: 100%;
    text-align: left;
}
button.window_entry_button i {
    margin-right: .5em;
}
button.window_entry_button:hover {
    background-color: #c0c0c0;
}
button.window_entry_button.active {
    background-color: #b1b1b1;
}
/* ... */

